# tree-sitter-qmake

./: CMakeLists.txt  Cargo.toml  LICENSE.MIT  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-qmake.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_qmake/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQmake/: qmake.h
bindings/swift/TreeSitterQmakeTests/: TreeSitterQmakeTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
