[package]
name = "tree-sitter-qmake"
description = "A tree sitter grammar for the Qmake build system"
version = "0.1.0"
authors = ["tinger <tinger@tinger.dev>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "qmake"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tingerrr/tree-sitter-qmake"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
