[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-qmake"
description = "A tree sitter grammar for the Qmake build system"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "qmake"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "tinger", email = "tinger@tinger.dev" }]
requires-python = ">=3.10"
license.text = "MIT OR Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tingerrr/tree-sitter-qmake"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
